node-deployment.yaml
#V1.10 for initialDelay
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcpdemo
  labels:
    app: gcpdemo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gcpdemo-app
  template:
    metadata:
      labels:
        app: gcpdemo-app
    spec:
      containers:
      - name: gcpdemo-app
        image: bkauf/gcpdemo:3.0
        resources:
          limits:
            cpu: "0.5"
          requests:
            cpu: "0.25"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
        #initialDelaySeconds: 10
        #periodSeconds: 5
