node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-web-app
spec:
  ports:
    - port: 8080
  type: LoadBalancer
  selector:
    app: node-web-app
